syntax = "proto3";

package duality.v1;

option go_package = "github.com/louisbranch/duality-engine/api/gen/go/duality/v1;dualityv1";

import "common/v1/rng.proto";
import "duality/v1/outcome.proto";
import "duality/v1/dice.proto";
import "duality/v1/explain.proto";

message ActionRollRequest {
  // Additive modifier applied after summing the two d12s.
  int32 modifier = 1;

  // If omitted, the server returns a roll outcome (Hope/Fear/Crit) but does not
  // classify as success/failure.
  optional int32 difficulty = 2;

  // Optional RNG configuration for deterministic rolls.
  common.v1.RngRequest rng = 3;
}

message ActionRollResponse {
  int32 hope = 1;
  int32 fear = 2;
  int32 modifier = 3;

  // Echoed back if provided in the request.
  optional int32 difficulty = 4;

  // total = hope + fear + modifier
  int32 total = 5;
  bool is_crit = 6;
  bool meets_difficulty = 7;
  Outcome outcome = 8;
  common.v1.RngResponse rng = 9;
}

message DualityOutcomeRequest {
  int32 hope = 1;
  int32 fear = 2;
  int32 modifier = 3;

  // If omitted, the server returns a roll outcome (Hope/Fear/Crit) but does not
  // classify as success/failure.
  optional int32 difficulty = 4;
}

message DualityOutcomeResponse {
  int32 hope = 1;
  int32 fear = 2;
  int32 modifier = 3;

  // Echoed back if provided in the request.
  optional int32 difficulty = 4;

  // total = hope + fear + modifier
  int32 total = 5;
  bool is_crit = 6;
  bool meets_difficulty = 7;
  Outcome outcome = 8;
}

message DualityExplainRequest {
  int32 hope = 1;
  int32 fear = 2;
  int32 modifier = 3;

  // If omitted, the server returns a roll outcome (Hope/Fear/Crit) but does not
  // classify as success/failure.
  optional int32 difficulty = 4;

  // Optional correlation identifier for callers.
  optional string request_id = 5;
}

message DualityExplainResponse {
  int32 hope = 1;
  int32 fear = 2;
  int32 modifier = 3;

  // Echoed back if provided in the request.
  optional int32 difficulty = 4;

  // total = hope + fear + modifier
  int32 total = 5;
  bool is_crit = 6;
  bool meets_difficulty = 7;
  Outcome outcome = 8;
  string rules_version = 9;
  Intermediates intermediates = 10;
  repeated ExplainStep steps = 11;
}

message DualityProbabilityRequest {
  int32 modifier = 1;
  int32 difficulty = 2;
}

message DualityProbabilityResponse {
  int32 total_outcomes = 1;
  int32 crit_count = 2;
  int32 success_count = 3;
  int32 failure_count = 4;
  repeated OutcomeCount outcome_counts = 5;
}

message RulesVersionRequest {}

message RulesVersionResponse {
  string system = 1;
  string module = 2;
  string rules_version = 3;
  string dice_model = 4;
  string total_formula = 5;
  string crit_rule = 6;
  string difficulty_rule = 7;
  repeated Outcome outcomes = 8;
}

message OutcomeCount {
  Outcome outcome = 1;
  int32 count = 2;
}

message RollDiceRequest {
  // The dice to roll in order.
  repeated DiceSpec dice = 1;

  // Optional RNG configuration for deterministic rolls.
  common.v1.RngRequest rng = 2;
}

message RollDiceResponse {
  repeated DiceRoll rolls = 1;

  // The sum of all rolls.
  int32 total = 2;

  // RNG details used for this roll.
  common.v1.RngResponse rng = 3;
}
