syntax = "proto3";

package game.v1;

import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";
import "systems/daggerheart/v1/state.proto";

option go_package = "github.com/louisbranch/fracturing.space/api/gen/go/game/v1;gamev1";

// Character represents a character's identity and metadata (config layer).
message Character {
  string id = 1;
  string campaign_id = 2;
  google.protobuf.StringValue participant_id = 3;
  string name = 4;
  repeated string aliases = 5;
  string pronouns = 6;
  CharacterKind kind = 7;
  string notes = 8;
  string avatar_set_id = 9;
  string avatar_asset_id = 10;
  google.protobuf.Timestamp created_at = 11;
  google.protobuf.Timestamp updated_at = 12;
}

enum CharacterKind {
  CHARACTER_KIND_UNSPECIFIED = 0;
  PC = 1;
  NPC = 2;
}

// CharacterProfile represents system-agnostic character definition data (config layer).
// Game-system-specific profiles extend this with system-specific traits.
// Note: HP maximum is system-specific and lives in the system profile extension.
message CharacterProfile {
  string campaign_id = 1;
  string character_id = 2;

  // System-specific profile extensions.
  // Only one of these should be set, matching the campaign's game system.
  oneof system_profile {
    systems.daggerheart.v1.DaggerheartProfile daggerheart = 3;
  }
}

// CharacterService provides CRUD operations for characters and their profiles.
service CharacterService {
  // Create a character (PC/NPC/etc) for a campaign.
  rpc CreateCharacter(CreateCharacterRequest) returns (CreateCharacterResponse);

  // Update a character's metadata (name/kind/notes).
  rpc UpdateCharacter(UpdateCharacterRequest) returns (UpdateCharacterResponse);

  // Delete a character.
  rpc DeleteCharacter(DeleteCharacterRequest) returns (DeleteCharacterResponse);

  // List characters for a campaign.
  rpc ListCharacters(ListCharactersRequest) returns (ListCharactersResponse);

  // Assign a campaign-scoped default controller for a character.
  rpc SetDefaultControl(SetDefaultControlRequest) returns (SetDefaultControlResponse);

  // Get a character sheet (character, profile, and state).
  rpc GetCharacterSheet(GetCharacterSheetRequest) returns (GetCharacterSheetResponse);

  // Patch a character profile (all fields optional).
  rpc PatchCharacterProfile(PatchCharacterProfileRequest) returns (PatchCharacterProfileResponse);
}

message CreateCharacterRequest {
  // The campaign ID to create the character for.
  string campaign_id = 1;

  // Display name for the character.
  string name = 2;

  // Optional character aliases.
  repeated string aliases = 3;

  // Optional free-form character pronouns.
  string pronouns = 4;

  // The kind of character (PC or NPC).
  CharacterKind kind = 5;

  // Optional free-form notes about the character.
  string notes = 6;

  // Optional avatar set identifier.
  string avatar_set_id = 7;

  // Optional avatar asset identifier.
  string avatar_asset_id = 8;
}

message CreateCharacterResponse {
  Character character = 1;
}

message UpdateCharacterRequest {
  // The campaign ID.
  string campaign_id = 1;

  // The character ID.
  string character_id = 2;

  // Optional updated display name.
  google.protobuf.StringValue name = 3;

  // Optional updated character aliases.
  repeated string aliases = 4;

  // Optional updated character pronouns.
  google.protobuf.StringValue pronouns = 5;

  // Optional updated kind.
  CharacterKind kind = 6;

  // Optional updated notes.
  google.protobuf.StringValue notes = 7;

  // Optional updated owner participant identifier (ownership transfer).
  google.protobuf.StringValue owner_participant_id = 8;

  // Optional updated avatar set identifier.
  google.protobuf.StringValue avatar_set_id = 9;

  // Optional updated avatar asset identifier.
  google.protobuf.StringValue avatar_asset_id = 10;
}

message UpdateCharacterResponse {
  Character character = 1;
}

message DeleteCharacterRequest {
  // The campaign ID.
  string campaign_id = 1;

  // The character ID.
  string character_id = 2;

  // Optional reason for deletion.
  string reason = 3;
}

message DeleteCharacterResponse {
  Character character = 1;
}

message ListCharactersRequest {
  // The campaign ID to list characters for.
  string campaign_id = 1;

  // The maximum number of characters to return.
  // If zero, the server defaults to 10. The server clamps values above 10 to 10.
  int32 page_size = 2;

  // A page token received from a prior ListCharactersResponse.
  string page_token = 3;
}

message ListCharactersResponse {
  repeated Character characters = 1;
  string next_page_token = 2;
}

message SetDefaultControlRequest {
  // The campaign ID.
  string campaign_id = 1;

  // The character ID.
  string character_id = 2;

  // The participant ID of the controller (empty means unassigned).
  google.protobuf.StringValue participant_id = 3;
}

message SetDefaultControlResponse {
  // The campaign ID.
  string campaign_id = 1;

  // The character ID.
  string character_id = 2;

  // The participant ID of the controller (empty means unassigned).
  google.protobuf.StringValue participant_id = 3;
}

message GetCharacterSheetRequest {
  // The campaign ID.
  string campaign_id = 1;

  // The character ID.
  string character_id = 2;
}

message GetCharacterSheetResponse {
  Character character = 1;
  CharacterProfile profile = 2;
  CharacterState state = 3;
}

message PatchCharacterProfileRequest {
  // The campaign ID.
  string campaign_id = 1;

  // The character ID.
  string character_id = 2;

  // System-specific profile patch (includes hp_max for Daggerheart).
  oneof system_profile_patch {
    systems.daggerheart.v1.DaggerheartProfile daggerheart = 3;
  }
}

message PatchCharacterProfileResponse {
  CharacterProfile profile = 1;
}

// CharacterState represents the current mutable state of a character as a materialized projection.
// This is managed by SnapshotService, but referenced here for GetCharacterSheet.
// Note: HP is system-specific and lives in the system state extension.
message CharacterState {
  string campaign_id = 1;
  string character_id = 2;

  // System-specific state extensions.
  // Only one of these should be set, matching the campaign's game system.
  oneof system_state {
    systems.daggerheart.v1.DaggerheartCharacterState daggerheart = 3;
  }
}
